some small align fix

--- a/nezal-ar/public/tunisia-defender/css/game.css
+++ b/nezal-ar/public/tunisia-defender/css/game.css
@@ -582,8 +582,8 @@ textarea{
 	left:187px;
 	top: 1px;
 	width:130px;
-	height:22px;
-	line-height:22px;
+	height:20px;
+	line-height:20px;
 }
 
 .status .lives{
@@ -591,16 +591,16 @@ textarea{
 	left:354px;
 	top: 1px;
 	width:80px;
-	height:22px;
-	line-height:22px;
+	height:20px;
+	line-height:20px;
 }
 
 .status .waves{
 	position:absolute;
 	top: 1px;
 	width:150px;
-	height:22px;
-	line-height:22px;
+	height:20px;
+	line-height:20px;
 	left:15px
 }
 
